--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -3,7 +3,7 @@
     {% if site.logo %}{% include site-logo.html %}{% endif %}
     <ul class="list list--nav">
           <li class="item  item--nav item--current">
-              <a href="/"> home </a>
+              <a href="{{ site.baseurl }}"> home </a>
               <a href="https://myhappydata.com"> about </a>
               <a href="https://www.r-bloggers.com/"> r-bloggers </a>
           </li>
